# commons-python

./: CHANGELOG.md  README.md  pyproject.toml  release.config.js
.github/workflows/: ci.yaml
src/commons/: __init__.py
src/commons/dtos/: __init__.py  conversation.py  event.py  keycloak.py  log.py  notification.py  phone_number.py  seat.py  trace.py  user.py
src/commons/enums/: __init__.py  address_type.py  conversation_channel.py  conversation_priority.py  event_permission_key.py  event_visible_tab.py  interest_category.py  interest_type.py  log_level.py  marital_status.py  phone_number_type.py  realm_role.py  status_type.py
src/commons/errors/: __init__.py  conversation.py  error_code.py  event.py  framework_exception.py  invitation.py  notification.py  seat.py  ticket.py  user.py
src/commons/models/: __init__.py  address.py  api_response.py  audit_metadata.py  contract_envelope.py  geo_location.py  pagination.py  permission.py  phone_number.py  sort_criteria.py  token_info.py  trace_context.py  validation_error.py
src/commons/schemas/: __init__.py  contract_envelope.py  health.py  identity.py  pagination.py  user.py
src/commons/utils/: __init__.py  locale.py  phone_number.py  role_utils.py
src/omnixys_commons/: __init__.py
src/omnixys_commons/dtos/: __init__.py  address.py  auth.py  base.py  conversation.py  event.py  invitation.py  kc.py  log.py  phone_number.py  ticket.py  user.py
src/omnixys_commons/enums/: __init__.py  contact_options_type.py  conversation_status.py  event_media_type.py  event_milestone_type.py  event_permission_key.py  event_role.py  event_type.py  gender_type.py  message_direction.py  person_status.py  realm_role_type.py  relationship_type.py  seat_color_group_match.py  sort_direction.py  user_type.py
src/omnixys_commons/errors/: __init__.py  conversation.py  event.py  invitation.py  notification.py  seat.py  ticket.py  user.py
src/omnixys_commons/models/: __init__.py  api_response.py  key_value.py  omnixys_locale.py  pagination.py  phone_number.py  sort_criteria.py  temporal_range.py  trace_context.py
src/omnixys_commons/schemas/: __init__.py  base.py  envelope.py  error.py  identity.py  message.py  schema_registry.py  user.py
src/omnixys_commons/utils/: __init__.py  null.py  null_to_undefined.py  phone_number.py  role_utils.py  username.py
tests/: test_import.py
