[project]
name = "omnixys-commons"
dynamic = ["version"]
description = "Omnixys shared platform contracts – transport-neutral DTOs, enums, errors, and models"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
authors = [{ name = "Caleb Gyamfi", email = "caleb.gyamfi@omnixys.com" }]
keywords = ["omnixys", "commons", "contracts", "dtos", "enums"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/omnixys/omnixys"
Repository = "https://github.com/omnixys/omnixys"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/commons/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/commons"]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "mypy>=1.18.2",
    "pytest>=9.1.0",
    "pytest-asyncio>=0.26.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN101", "ANN401", "S101",
  "T20", "FBT", "D", "INP001",
]
"src/**" = [
  "D", "ANN401", "ARG002", "S104", "S105",
  "TC001", "TC002", "TC003",
  "PLR0911", "PLC0415", "FBT001",
  "TRY003", "EM101", "PLR2004",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "commons.*"
disallow_subclassing_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
